gitops/apps/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
spec:
  type: ClusterIP
  selector:
    app: headlamp
  ports:
  - name: http
    port: 80
    targetPort: http
