gitops/apps/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  annotations:
    cert-manager.io/cluster-issuer: root-logicmg
spec:
  rules:
  - host: "dash.logicmg.intra"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
  tls:
  - hosts:
    - "dash.logicmg.intra"
    secretName: dash-tls
